kubefiles/02-postgres-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: quarkus-cqrs-demo
spec:
  selector:
    matchLabels:
      app: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - image: postgres
          name: bankaccount-postgres
          ports:
            - containerPort: 5432

---

apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: quarkus-cqrs-demo
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgresql

# kubectl delete service postgresql -n quarkus-cqrs-demo && kubectl delete deployment postgresql -n quarkus-cqrs-demo && kubectl delete configmap postgresql-config -n quarkus-cqrs-demo
