kubefiles/03-mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: quarkus-cqrs-demo
spec:
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - image: mongo
          name: bankaccount-mongodb
          ports:
            - containerPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: quarkus-cqrs-demo
spec:
  type: NodePort
  ports:
    - port: 27017
  selector:
    app: mongodb

# kubectl delete service mongodb -n quarkus-cqrs-demo && kubectl delete deployment mongodb -n quarkus-cqrs-demo
