kubefiles/06-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bankaccount-ingress
  namespace: quarkus-cqrs-demo
spec:
  rules:
    - host: dev.local
      http:
        paths:
          - path: /balance-service
            backend:
              serviceName: balance-service
              servicePort: 8080
          - path: /transaction-service
            backend:
              serviceName: transaction-service
              servicePort: 8080

# kubectl delete -n quarkus-cqrs-demo ingress bankaccount-ingress
